--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="content-project">
   <h1 class="judul-project">{{ page.title }}</h1>
-  <p class="tanggal {% if page.title == 'About' %}tab-about{% endif %}"><i class="fa fa-calendar"></i> {{ page.date | date: "%-d %B, %Y" }} &nbsp; <i class="fa fa-user-circle"></i><a href="/about/" class="penulis"> {{ page.author }}</a></p>
+  <p class="tanggal {% if page.title == 'About' %}tab-about{% endif %}"><i class="fa fa-calendar"></i> {% include tanggal-id.html %} &nbsp; <i class="fa fa-user-circle"></i><a href="/about/" class="penulis"> {{ page.author }}</a></p>
   <p>{{ content | toc }}</p>
   {% include lisensi.html %}
 </div>
