--- a/_includes/lisensi.html
+++ b/_includes/lisensi.html
@@ -4,7 +4,7 @@
         <img src="{{'/assets/img/lisensi.png'}}" alt="Lisensi CC BY-NC-SA">
         <p>
             Tulisan ini dilisensikan dengan: <br>
-            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.id">Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional (CC BY-NC-SA 4.0)</a>
+            <strong>Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional</strong> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.id">(CC BY-NC-SA 4.0)</a>
         </p>
     </div>
 </div>
