--- a/_includes/tanggal-id.html
+++ b/_includes/tanggal-id.html
@@ -1,5 +1,5 @@
 <!-- Khusus layout Project -->
-<!-- ntah kenapa plugin jekyll-localize gk jalan di collections "project" -->
+<!-- ntah kenapa plugin jekyll-date-localization gk jalan di collections "project" -->
 {% assign var-bulan = "Januari|Februari|Maret|April|Mei|Juni|Juli|Agustus|September|Oktober|November|Desember" | split: "|" %}
 {% assign m = page.date | date: "%-m" | minus: 1 %}
 {% assign hari = page.date | date: "%-d" %}
