--- a/assets/css/_addon/font.scss
+++ b/assets/css/_addon/font.scss
@@ -1,4 +1,4 @@
 // Font Signika
 @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300;400&display=swap');
-// Font Fira Code (untuk elemen code)
+// Font Fira Code (untuk codeblock)
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&display=swap');
