--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <p>
         Dibuat dengan <i class="fa fa-heart"></i> oleh Albawid<br>
-        Menggunakan <a href="https://jekyll.com" target="_blank" class="inline-link">Jekyll</a> sebagai framework<br>
-        Source Code tersedia di <a href="https://github.com/albawid" target="_blank" class="inline-link">Github</a><br>
+        Menggunakan <a href="https://jekyll.com" target="_blank" class="inline-link" rel="noreferrer noopener">Jekyll</a> sebagai framework<br>
+        Source Code tersedia di <a href="https://github.com/albawid" target="_blank" class="inline-link" rel="noreferrer noopener">Github</a><br>
         Copyright © 2023
     </p>
 </footer>
