--- a/_includes/lisensi.html
+++ b/_includes/lisensi.html
@@ -1,10 +1,10 @@
 <div class="lisensi">
-    <h2>Lisensi</h2>
+    <h1>Lisensi</h1>
     <div class="space-between">
         <img src="{{'/assets/img/lisensi.png'}}" alt="Lisensi CC BY-NC-SA">
         <p>
             Tulisan ini dilisensikan dengan: <br>
-            <strong>Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional</strong> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.id">(CC BY-NC-SA 4.0)</a>
+            <strong>Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional</strong> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.id" target="_blank" rel="noreferrer noopener">(CC BY-NC-SA 4.0)</a>
         </p>
     </div>
 </div>
