--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -94,7 +94,7 @@
 
         <script>
             var typed = new Typed("#ketik", {
-            strings: ["^900 Kang Ketik", "^900 Wibu","^900 Gamer"],
+            strings: ["^900 Kang Ketik", "^900 Weebs","^900 Gamer", "^900 Airdropper"],
             typeSpeed: 90,
             startDelay: 0,
             backSpeed: 70,
