malas merinci perubahan intinya penambahan fitur mode malam, perbaikan typo dan beberapa update dari 2023 ke 2024

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
         Dibuat dengan <i class="fa fa-heart"></i> oleh Albawid<br>
         Menggunakan <a href="https://jekyll.com" target="_blank" class="inline-link" rel="noreferrer noopener">Jekyll</a> sebagai framework<br>
         Source Code tersedia di <a href="https://github.com/albawid" target="_blank" class="inline-link" rel="noreferrer noopener">Github</a><br>
-        Copyright © 2023
+        Copyright © 2023-2024
     </p>
 </footer>
