--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script type="text/javascript" src="/assets/js/dark-mode.js"></script>
     {% include favico.html %}
     {% include link-static.html %}
     <link rel="stylesheet" href="{{ '/assets/css/default.css' | relative_url }}">
     <title>Albawid | {{ page.title }}</title>
   </head>
   <body>
+    <button onclick="fungsi()" id="btn-dark">dark mode</button>
     {% include navbar.html %}
     <div class="container">
         {{ content }}
