--- a/assets/css/_addon/navbar.scss
+++ b/assets/css/_addon/navbar.scss
@@ -28,3 +28,7 @@
 	color: var(--color-hover);
 	cursor: default;
 }
+
+div.navbar a div#btn-dark i.dark-light.fa-solid.fa-moon {
+	font-size: 1.5rem;
+}
