--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <script type="text/javascript" src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+        <script type="text/javascript" src="/assets/js/dark-mode.js"></script>
         {% include favico.html %}
         <link rel="stylesheet" href="{{ '/assets/css/home.css' }}">
         <title>{{ site.title }}</title>
@@ -15,7 +17,7 @@
             <div class="main">
                 
                 <div class="pp">
-                    <img src="{{ site.maskot }}" alt="foto profil">
+                    <img class="img" src="{{ site.maskot }}" alt="Maskot Web">
                 </div>
                 
                 <div class="deskripsi">
@@ -30,14 +32,16 @@
                         <a href="https://github.com/{{ site.github_username }}/" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="mailto:{{ site.email }}?cc=&bcc=&subject=&body="><i class="fa fa-envelope"></i></a>
                         <a href="/about/"><i class="fa fa-user-circle"></i></a>
+                        <div id="btn-dark" onclick="fungsi()" type="button"><i class="dark-light fa-solid fa-sun"></i></div>
                     </div>
 
                 </div> <!-- Deskripsi -->
             </div> <!-- Main -->
 
-            <div class="scroll-bawah"> <!-- tanda scroll kebawah untuk tampilan min 768px -->
+            <!-- tanda scroll kebawah untuk tampilan min 768px -->
+            <!-- <div class="scroll-bawah"> 
                 <i class="fa fa-sort-down"></i>
-            </div>
+            </div> -->
 
         </div> <!-- Container-satu -->
 
